--- a/regras-grupo-trocas.html
+++ b/regras-grupo-trocas.html
@@ -27,6 +27,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title>Regras Grupo Trocas & Vendas</title>
     <meta property="og:title" content="BoardgameBH [BGBH]">
     <meta property="og:site_name" content="BoardgameBH [BGBH]">
     <meta property="og:url" content="http://www.bgbh.com.br/regras-grupo-trocas.html">
@@ -35,169 +36,183 @@
     <meta property="og:image" content="http://bgbh.com.br/images/og-image.jpg">
     <meta property="og:image:secure_url" content="http://bgbh.com.br/images/og-image.jpg">
 
+    <!-- fonts -->
     <link rel="icon" type="image/png" href="https://lucascmedeiros.com.br/bgbh/favicon.ico" />
-    <link href="lista/dist/assets/styles/style.css" rel="stylesheet" type="text/css">
-    <title>Regras Grupo Trocas & Vendas</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,500&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <!-- external css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+    <!-- custom css -->
+    <link rel="stylesheet" href="../public/css/styles.css">
 </head>
 
-<body style="font-size: 18px;">
-    <nav class="navbar navbar-expand-sm navbar-dark">
-        <a class="navbar-brand d-flex align-items-center" href="/">
-            <img src="lista/dist/assets/images/logo_com_sombra.png" width="30" height="30"
-                class="d-inline-block align-top mr-1" alt="">
-            BoardgameBH
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Voltar para o site</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="col-12 my-4 px-4">
-        <h3 class="font-800">GRUPO TROCAS & VENDAS BGBH I e II</h4>
-            <div class="regras font-gray mt-4">
-                <div class="regras__geral">
-                    <h5>
-                        Grupos
-                        <span class="font-800">EXCLUSIVOS</span>
-                        para usuários que consigam fazer suas negociações em
-                        <span class="font-800">Belo Horizonte e região.</span>
-                    </h5>
-                    <hr />
-                    <h5 class="font-800 mt-3">
-                        <span class="text-danger">ATENÇÃO:</span>
-                        Chat restrito
-                    </h5>
-                    <span class="font-gray">
-                        Evite conversas. Use o chat respeitando as considerações abaixo:
-                    </span>
-                </div>
-                <div class="regras__permitido mt-4">
-                    <div class="regras__permitido--titulo">
-                        <i class="fas fa-check text-success"></i>
-                        <span class="font-800 text-success">PERMITIDO</span>
-                    </div>
-                    <div class="regras__permitido--lista">
-                        <ul class="text-success">
-                            <li>
-                                Enviar sua lista de troca
-                            </li>
-                            <li>
-                                Enviar sua lista de venda
-                                <span class="minor-text">(Preço obrigatório para venda)</span>
-                            </li>
-                            <li>Perguntar por jogos específicos que você esteja procurando <br />
-                                <span class="minor-text">(Caso tenha algum jogo que esteja sendo procurado, responda a
-                                    pessoa diretamente no privado)</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="regras__proibido mt-4">
-                    <div class="regras__proibido--titulo">
-                        <i class="fas fa-times text-danger"></i>
-                        <span class="font-800 text-danger">PROIBIDO</span>
-                    </div>
-                    <div class="regras__proibido--lista">
-                        <ul class="text-danger">
-                            <li>Bate papo</li>
-                            <li>Comentários sobre os anúncios</li>
-                            <li>Gifs e figurinhas</li>
-                            <li>Links de leilões</li>
-                            <li>Publicações de promoções de lojas, editoras, etc</li>
-                            <li>Publicidade externa, divulgação de outros canais, grupos, etc</li>
-                        </ul>
-                        <div class="mt-3 text-danger">
-                            É proibida a permanência de um mesmo usuário nos dois grupos. Ambos possuem a mesma
-                            finalidade e o segundo foi criado para possibilitar o acesso de mais pessoas após a
-                            lotação do primeiro. <br />
-                            <strong>
-                                Caso queira que sua oferta seja vista por usuários de ambos os grupos não deixe de
-                                utilizar a Lista de Trocas & Vendas do site.
-                            </strong>
-                        </div>
-                    </div>
-                </div>
-                <div class="regras__evitar mt-4 text-primary">
-                    <div class="font-800">EVITE</div>
-                    <ul>
-                        <li>Envio de fotos no grupo (mande diretamente para os interessados).</li>
-                        <li>O Envio repetitivo das ofertas em um curto período de tempo.
-                            <br />
-                            <span class="minor-text">(Devido a baixa rotatividade de entrada não existe necessidade que
-                                a
-                                mesma oferta seja
-                                repetida todos os dias)</span>
+<body>
+    <div class="site-wrapper">
+        <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark" id="mainNavbar">
+            <div class="container-fluid">
+                <a class="navbar-brand d-flex align-items-center" href="#">
+                    <img src="/images/bgbh-logo.png" alt="logo BGBH" height="30">
+                    <span class="navbarLogoText ms-2">BoardgameBH</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
+                    aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link fw-bold fs-7 active" href="/"
+                                onclick="ga('send', 'event', 'Voltar para o site', 'click', 'regras grupo trocas');">
+                                VOLTAR PARA O SITE
+                            </a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="regras__interesse_e_duvidas mt-4">
-                <span class="font-800">
-                    Interessou em algum jogo ou ficou com alguma dúvida sobre o anúncio?
-                </span>
-                <br />
-                <ul>
-                    <li>
-                        Contate o dono por mensagem direta, no privado.
-                    </li>
-                </ul>
-            </div>
-            <div class="regras__jogadores_outras_regioes mt-4">
-                <div class="font-800">
-                    <span class="text-danger">ATENÇÃO!</span>
-                    Usuários de outras regiões
+        </nav>
+        <div class="col-12 px-4" style="margin-top: 120px">
+            <h1>GRUPO TROCAS & VENDAS BGBH I e II</h4>
+                <div class="regras font-gray mt-4">
+                    <div class="regras__geral">
+                        <p>
+                            Grupos
+                            <span class="extrabold">EXCLUSIVOS</span>
+                            para usuários que consigam fazer suas negociações em
+                            <span class="extrabold">Belo Horizonte e região.</span>
+                        </p>
+                        <hr />
+                        <h3 class="extrabold mt-3">
+                            <span class="text-danger">ATENÇÃO:</span>
+                            Chat restrito
+                        </h3>
+                        <span class="font-gray">
+                            Evite conversas. Use o chat respeitando as considerações abaixo:
+                        </span>
+                    </div>
+                    <div class="regras__permitido mt-4">
+                        <div class="regras__permitido--titulo">
+                            <i class="fas fa-check text-success"></i>
+                            <span class="extrabold text-success">PERMITIDO</span>
+                        </div>
+                        <div class="regras__permitido--lista">
+                            <ul class="text-success">
+                                <li>
+                                    Enviar sua lista de troca
+                                </li>
+                                <li>
+                                    Enviar sua lista de venda
+                                    <span class="minor-text">(Preço obrigatório para venda)</span>
+                                </li>
+                                <li>Perguntar por jogos específicos que você esteja procurando <br />
+                                    <span class="minor-text">(Caso tenha algum jogo que esteja sendo procurado, responda
+                                        a
+                                        pessoa diretamente no privado)</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="regras__proibido mt-4">
+                        <div class="regras__proibido--titulo">
+                            <i class="fas fa-times text-danger"></i>
+                            <span class="extrabold text-danger">PROIBIDO</span>
+                        </div>
+                        <div class="regras__proibido--lista">
+                            <ul class="text-danger">
+                                <li>Bate papo</li>
+                                <li>Comentários sobre os anúncios</li>
+                                <li>Gifs e figurinhas</li>
+                                <li>Links de leilões</li>
+                                <li>Publicações de promoções de lojas, editoras, etc</li>
+                                <li>Publicidade externa, divulgação de outros canais, grupos, etc</li>
+                            </ul>
+                            <div class="mt-3 text-danger">
+                                É proibida a permanência de um mesmo usuário nos dois grupos. Ambos possuem a mesma
+                                finalidade e o segundo foi criado para possibilitar o acesso de mais pessoas após a
+                                lotação do primeiro. <br />
+                                <strong>
+                                    Caso queira que sua oferta seja vista por usuários de ambos os grupos não deixe de
+                                    utilizar a Lista de Trocas & Vendas do site.
+                                </strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="regras__evitar mt-4 text-primary">
+                        <div class="extrabold">EVITE</div>
+                        <ul>
+                            <li>Envio de fotos no grupo (mande diretamente para os interessados).</li>
+                            <li>O Envio repetitivo das ofertas em um curto período de tempo.
+                                <br />
+                                <span class="minor-text">(Devido a baixa rotatividade de entrada não existe necessidade
+                                    que
+                                    a
+                                    mesma oferta seja
+                                    repetida todos os dias)</span>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <ul>
-                    <li>
-                        Só podem participar caso possuam formas de entrega/retirada de jogos em
-                        <strong>Belo Horizonte</strong>.
-                    </li>
-                </ul>
-            </div>
-            <div class="regras__respeito mt-4">
-                <span class="font-800">
-                    RESPEITO E EDUCAÇÃO COM TODOS
-                </span>
-                <ul>
-                    <li>
-                        Não serão tolerados xingamentos, piadinhas, pornografia nem
-                        <strong>
-                            qualquer tipo de atitude preconceituosa,
-                        </strong>
-                        racismo, machismo, homofobia, misoginia, e outros.
-                    </li>
-                </ul>
-            </div>
+                <div class="regras__interesse_e_duvidas mt-4">
+                    <span class="extrabold">
+                        Interessou em algum jogo ou ficou com alguma dúvida sobre o anúncio?
+                    </span>
+                    <br />
+                    <ul>
+                        <li>
+                            Contate o dono por mensagem direta, no privado.
+                        </li>
+                    </ul>
+                </div>
+                <div class="regras__jogadores_outras_regioes mt-4">
+                    <div class="extrabold">
+                        <span class="text-danger">ATENÇÃO!</span>
+                        Usuários de outras regiões
+                    </div>
+                    <ul>
+                        <li>
+                            Só podem participar caso possuam formas de entrega/retirada de jogos em
+                            <strong>Belo Horizonte</strong>.
+                        </li>
+                    </ul>
+                </div>
+                <div class="regras__respeito mt-4">
+                    <span class="extrabold">
+                        RESPEITO E EDUCAÇÃO COM TODOS
+                    </span>
+                    <ul>
+                        <li>
+                            Não serão tolerados xingamentos, piadinhas, pornografia nem
+                            <strong>
+                                qualquer tipo de atitude preconceituosa,
+                            </strong>
+                            racismo, machismo, homofobia, misoginia, e outros.
+                        </li>
+                    </ul>
+                </div>
 
-            <div class="mt-4">
-                Para ver as regras de utilização da
-                <span class="font-weight-bold">Lista de Trocas & Vendas</span>,
-                clique no link a seguir:
-                <a href="/regras-lista.html" target="_blank">Ver regras de utilização da lista</a>
-            </div>
+                <div class="mt-4">
+                    Para ver as regras de utilização da
+                    <span class="font-weight-bold">Lista de Trocas & Vendas</span>,
+                    clique no link a seguir:
+                    <a class="inheritLink" href="/regras-lista.html" target="_blank">Ver regras de utilização da
+                        lista</a>
+                </div>
 
-            <p class="font-weight-bold mt-2"> Em caso de dúvidas, entre em contato conosco pelos grupos ou email da
-                BoardgameBH.</p>
+                <p class="font-weight-bold mt-2"> Em caso de dúvidas, entre em contato conosco pelos grupos ou email da
+                    BoardgameBH.</p>
 
-            <div>
-                <a class="btn btn-primary btn-md" href="https://chat.whatsapp.com/HOCy0QO9cggCsk2X2ESKXo"
-                    target="_blank">ENTRAR NO GRUPO</a>
-            </div>
+                <div class="mb-5">
+                    <a class="btn primaryButton btn-md" href="https://chat.whatsapp.com/HOCy0QO9cggCsk2X2ESKXo"
+                        target="_blank">ENTRAR NO GRUPO</a>
+                </div>
+        </div>
     </div>
-
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
