--- a/site/index.html
+++ b/site/index.html
@@ -56,6 +56,7 @@
     <meta property="og:image:secure_url" content="http://bgbh.com.br/images/og-image.jpg">
 
     <!-- fonts -->
+    <link rel="icon" type="image/png" href="https://lucascmedeiros.com.br/bgbh/favicon.ico" />
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
