--- a/site/index.html
+++ b/site/index.html
@@ -183,14 +183,17 @@
                             <div class="col-lg-6">
                                 <div class="card-body">
                                     <h3 class="mb-2">DRAFTOSAURUS - TORNEIO ONLINE</h3>
-                                    <p class="card-text">
+                                    <p class="card-text text-center">
                                         Já imaginou gerenciar um Parque de Dinossauros com a intenção de atrair o maior
                                         número possível de visitantes nesse inusitado empreendimento? Não? Então
-                                        prepa-se, em ABRIL os DinoMeeples irão invandir o BoardgameBH
+                                        prepare-se para entrar numa super competição para ver quem controla o melhor
+                                        parque de DinoMeeples!
+                                        <br>
                                     </p>
-                                    <p class="mt-3">
-                                        <span class="extrabold">O recrutamento para essa perigosa missão começa em
-                                            breve.</span>
+                                    <p class="mt-3 text-center">
+                                        <a href="/torneios.html" target="_blank" class="btn btn-dark"
+                                            onclick="ga('send', 'event', 'Ver regras torneio', 'click-botao');">Saiba
+                                            mais sobre o torneio</a>
                                     </p>
                                     <!-- <span>
                                             Este torneio possui etapas independentes de classificação, não sendo
@@ -200,8 +203,6 @@
                                         </span>
                                     </p>
                                     <p class="card-text">
-                                        <a href="/torneios.html" target="_blank" class="btn btn-dark" onclick="ga('send', 'event', 'Ver regras torneio', 'click-botao');">Saiba
-                                            mais</a>
                                     </p> -->
                                 </div>
                             </div>
