Atualização lista de troca e sorteio especial torneio

--- a/site/index.html
+++ b/site/index.html
@@ -73,7 +73,7 @@
 
 </head>
 
-<body data-bs-spy="scroll" data-bs-target="#mainNavbar" data-bs-offset="-30" tabindex="0">
+<body data-bs-spy="scroll" data-bs-target="#mainNavbar" tabindex="0">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WB466ZC" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
@@ -183,14 +183,14 @@
                             <div class="col-lg-6">
                                 <div class="card-body">
                                     <h3 class="mb-2">DRAFTOSAURUS - TORNEIO ONLINE</h3>
-                                    <p class="card-text text-center">
+                                    <p class="card-text">
                                         Já imaginou gerenciar um Parque de Dinossauros com a intenção de atrair o maior
                                         número possível de visitantes nesse inusitado empreendimento? Não? Então
                                         prepare-se para entrar numa super competição para ver quem controla o melhor
                                         parque de DinoMeeples!
                                         <br>
                                     </p>
-                                    <p class="mt-3 text-center">
+                                    <p class="mt-3">
                                         <a href="/torneios.html" target="_blank" class="btn btn-dark"
                                             onclick="ga('send', 'event', 'Ver regras torneio', 'click-botao');">Saiba
                                             mais sobre o torneio</a>
