--- a/torneios.html
+++ b/torneios.html
@@ -934,6 +934,24 @@
                     <!-- ./configuracoes adicionais final -->
                 </div>
 
+                <div class="mt-4 alert alert-danger boxAtencao">
+                    <p class="danger text-center">
+                        <span class="danger extrabold">ATENÇÃO!</span>
+                        Por padrão todas as partidas são configuradas para 45 minutos, no entanto, a
+                        <span class="danger bold">duração das partidas no torneio são de 10 minutos</span>.
+                        <br>
+                        Caso um jogador ultrapasse o limite de 11 minutos a
+                        <span class="danger bold">organização deverá ser informada</span> e o jogador
+                        poderá ser excluído da partida após
+                        <span class="danger bold">análise e permissão</span> dos responsáveis.
+                        Uma vez excluído da partida todos os
+                        <span class="danger bold">demais jogadores</span> são declarados
+                        <span class="danger bold">vencedores</span>
+                        e o jogador excluído é
+                        <span class="danger bold">eliminado da etapa</span>
+                        pela própria plataforma.
+                    </p>
+                </div>
             </div>
         </section>
         <!-- ./ ESTRUTURA DO TORNEIO -->
@@ -976,7 +994,150 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <h1 class="d-inline-block ms-2">SORTEIO ESPECIAL</h1>
+                        <h1 class="d-inline-block ms-2">SORTEIO ESPECIAL TAVERNA REAL</h1>
+                        <br>
+                        <small>(exclusivo para participantes do torneio)</small>
+                    </div>
+                </div>
+                <div class="row mt-4 premios">
+                    <div class="primeiroLugar d-flex flex-column align-items-center justify-content-center mb-2">
+                        <img src="http://www.bgbh.com.br/images/torneios/sorteios/vale-compra-taverna.png"
+                            alt="Vale compras Taverna Real">
+                        <h3 class="success mt-2">Vale-compra R$ 50,00</h3>
+                    </div>
+                    <small class="text-center mt-4">
+                        Quer ganhar um
+                        <span class="extrabold">VALE COMPRAS de R$ 50,00</span>
+                        da loja <span class="extrabold">Taverna Real</span>?
+                        Para participar é muito simples.
+                        <br>
+                        Ganhe cupons do sorteio com ações simples a sua escolha.
+                        <br>
+                        Cada ação vale um número determinado de cupons. Então,
+                        <span class="extrabold">quanto mais cupons você tiver maior a sua chance de levar o vale
+                            compras.</span>
+                        <br>
+                    </small>
+                    <h3 class="text-center my-4">LISTA DE AÇÕES</h3>
+                    <ul class="list-group list-group-flush mx-auto">
+                        <li
+                            class="list-group-item d-flex justify-content-between align-items-center flex-column bg-transparent">
+                            <span class="d-flex justify-content-center align-items-center w-100">
+                                <span class="text-center me-3">
+                                    Adquirir (ou ter adquirido) o
+                                    <span class="bold">Pacote Especial</span>
+                                    para todas as etapas
+                                    Pacote Especial para todas as etapas
+                                </span>
+                            </span>
+                            <span class="badge mt-2 rounded-pill bg-success">4 cupons</span>
+                            <small>(pacotes limitados)</small>
+                        </li>
+                        <li
+                            class="list-group-item d-flex justify-content-between align-items-center flex-column bg-transparent">
+                            <span class="d-flex justify-content-center align-items-center w-100">
+                                <span class="text-center me-3">
+                                    Fazer uma <span class="extrabold">postagem nos stories</span> com a imagem
+                                    disponibilizada pelo BGBH marcando
+                                    <span class="fst-italic">@boardgamebh, @meeplebr e @tavernareal</span> *
+                                </span>
+                            </span>
+                            <span class="badge mt-2 rounded-pill bg-success">2 cupons</span>
+                            <small>
+                                <a class="inheritLink"
+                                    href="http://www.bgbh.com.br/images/torneios/sorteios/torneio-draftosaurus-arte-sorteio-taverna.jpeg"
+                                    download>
+                                    Baixar imagem
+                                    <img class="ms-2"
+                                        src="http://www.bgbh.com.br/images/torneios/sorteios/torneio-draftosaurus-arte-sorteio-taverna.jpeg"
+                                        alt="W3Schools" height="50px">
+                                </a>
+                            </small>
+                        </li>
+                        <li
+                            class="list-group-item d-flex justify-content-between align-items-center flex-column bg-transparent">
+                            <span class="d-flex justify-content-center align-items-center w-100">
+                                <span class="text-center me-3">
+                                    Seguir a <a class="inheritLink" href="https://www.instagram.com/taverna_real/"
+                                        target="_blank"><span class="extrabold">Taverna Real</span></a> no Instagram *
+                                </span>
+                            </span>
+                            <span class="badge mt-2 rounded-pill bg-success">2 cupons</span>
+                        </li>
+                        <li
+                            class="list-group-item d-flex justify-content-between align-items-center flex-column bg-transparent">
+                            <span class="d-flex justify-content-center align-items-center w-100">
+                                <span class="text-center me-3">
+                                    Seguir o <a class="inheritLink" href="https://www.instagram.com/boardgamebh/"
+                                        target="_blank"><span class="extrabold">BGBH</span></a> no Instagram *
+                                </span>
+                            </span>
+                            <span class="badge mt-2 rounded-pill bg-success">1 cupom</span>
+                        </li>
+                        <li
+                            class="list-group-item d-flex justify-content-between align-items-center flex-column bg-transparent">
+                            <span class="d-flex justify-content-center align-items-center w-100">
+                                <span class="text-center me-3">
+                                    Seguir a <a class="inheritLink" href="https://www.instagram.com/meeplebr/"
+                                        target="_blank"><span class="extrabold">MeepleBR </span></a> no Instagram *
+                                </span>
+                            </span>
+                            <span class="badge mt-2 rounded-pill bg-success">1 cupom</span>
+                        </li>
+                        <li
+                            class="list-group-item d-flex justify-content-between align-items-center flex-column bg-transparent">
+                            <span class="d-flex justify-content-center align-items-center w-100">
+                                <span class="text-center me-3">
+                                    Seguir a <a class="inheritLink" href="https://www.instagram.com/mesasecreta/"
+                                        target="_blank"><span class="extrabold">Mesa Secreta </span></a> no Instagram *
+                                </span>
+                            </span>
+                            <span class="badge mt-2 rounded-pill bg-success">1 cupom</span>
+                        </li>
+                        <li class="list-group-item text-center bg-transparent border-bottom">
+                            Caso cumpra
+                            <span class="extrabold">todas as ações</span> receba mais
+                            <span class="badge rounded-pill bg-success">4 cupons extras</span>
+                            <small>totalizando <span class="extrabold">15 cupons</span></small>
+                        </li>
+                    </ul>
+                    <br>
+                    <p class="text-center mt-2">
+                        <small class="extrabold">
+                            * enviar print para o whatsapp do torneio para validação
+                        </small>
+                    </p>
+                    <div class="d-flex align-items-center justify-content-center">
+                        <small class="text-center">
+                            A retirada de cupons se encerra
+                            <span class="extrabold">terça-feira, 13 de Abril.</span>
+                            <br>
+                            O sorteio será realizado ao vivo durante a transmissão da final no canal do youtube da
+                            <a class="inheritLink" href="https://www.youtube.com/channel/UCY4AO_6AUGiWmP3GocAdcFA"
+                                target="_blank">Mesa Secreta</a>
+                            <br>
+                            <br>
+                            <span class="danger fst-italic">A validação do sorteado irá considerar apenas a ação
+                                referente ao número sorteado.
+                                <br> Caso o a ação seja vinculada a seguir alguma rede social, o perfil do
+                                sorteado deverá estar aberto para conferência.</span>
+                            <br>
+                        </small>
+                    </div>
+                    <!-- <div class="d-flex align-items-center justify-content-center mt-4">
+                        <a href="" class="btn primaryButton">Planilha com os números do sorteio</a>
+                    </div> -->
+                </div>
+            </div>
+        </section>
+        <!-- ./SORTEIO ESPECIAL -->
+        <hr>
+        <!-- SORTEIO ESPECIAL -->
+        <section class="premiacao sorteio sectionYSpacer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <h1 class="d-inline-block ms-2">SORTEIO ESPECIAL MEEPLEBR</h1>
                     </div>
                 </div>
                 <div class="row mt-4 premios">
