Refatorando e organizando taxonomia lista

--- a/torneios/realizados/torneio-005.html
+++ b/torneios/realizados/torneio-005.html
@@ -54,7 +54,7 @@
     <meta property="og:image:secure_url" content="http://bgbh.com.br/images/og-image.jpg">
 
     <link rel="icon" type="image/png" href="https://lucascmedeiros.com.br/bgbh/favicon.ico" />
-    <link href="lista/dist/assets/styles/style.css" rel="stylesheet" type="text/css">
+    <link href="http://www.bgbh.com.br/public/css/styles.css" rel="stylesheet" type="text/css">
     <title>TORNEIO ONLINE DE COLT EXPRESS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
