--- a/torneios/index.html
+++ b/torneios/index.html
@@ -68,7 +68,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <!-- custom css -->
-    <link rel="stylesheet" href="./public/css/styles.css">
+    <link rel="stylesheet" href="http://www.bgbh.com.br/public/css/styles.css">
 
     <style>
         .image-map {
